--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
     <title>Contact information</title>
 </head>
 <body>
-    <div><a href="index.html">Home</a></div>
+    <div><a href="index.html">Home</a>
     <a href="hobbies.html">My hobbies</a>
+    </div>
 
     <hr size="3" noshade>
     <h1>My contact information: <br></h1>
